src/objects/Third_Party_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ThirdParty_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Report_Completed__c</fullName>
        <label>Date Report Completed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_of_the_foreign_Material_size_sh__c</fullName>
        <label>Identify of the foreign Material size sh</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_there_a_change_required_to_the_subjec__c</fullName>
        <label>Is there a change required to the subjec</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likely_origin_of_the_foreign_body__c</fullName>
        <label>Likely origin of the foreign body</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Completing_the_Survey__c</fullName>
        <label>Person Completing the Survey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_plastic_is_the_same_color_and_think__c</fullName>
        <label>This plastic is the same color and think</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_corrective_actions_have_been_implem__c</fullName>
        <label>What corrective actions have been implem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_precautions_are_in_place_to_try_to__c</fullName>
        <label>What precautions are in place to try to</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X5_2x_pieces_of_hard_blue_Plastic__c</fullName>
        <label>5.2x pieces of hard blue Plastic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>survey_URL__c</fullName>
        <label>survey URL</label>
        <type>Url</type>
    </fields>
    <label>Third Party Survey</label>
    <nameField>
        <label>Third Party Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Survey</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>